// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders inner component with new props 1`] = `
<Component
  foo="bar"
  onNext={[Function]}
  onPrev={[Function]}
  page={1}
/>
`;

exports[`renders inner component with next page 1`] = `
<Component
  onNext={[Function]}
  onPrev={[Function]}
  page={3}
/>
`;

exports[`renders inner component with page 1 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  {
    "page": 1
  }
</Text>
`;

exports[`renders inner component with prev page 1`] = `
<Component
  onNext={[Function]}
  onPrev={[Function]}
  page={1}
/>
`;
